# fantasy-nba

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  a_sim.json  docker-compose.localserver.yml  docker-compose.server.yml  pyproject.toml  qa_check.py  run.ps1
.qa/: codex_draft_prompt.txt  debug_fetch.py  debug_origin.py  diagnose_cant_play.json  diagnose_cant_play.py  diagnose_cant_play2.py  full_season_test.py  reproduce_user_issue.py  run_draft.py  setup_payload.json  test_10team.py  test_create_league_debug.py  test_full_ui_mouse.py  test_modal_debug.py  test_new_league_headful.py  ui_full_test.py  verify_bugs_v09.mjs  verify_bugs_v09.py
app/: ai_gm.py  draft.py  injuries.py  injuries_route.py  llm.py  main.py  models.py  real_games.py  scoring.py  season.py  storage.py  trades.py
deploy/: Caddyfile.fragment  ORACLE_DEPLOY.md  push.ps1
static/: app.js  index.html  style.css
tests/: ITER1_O1.md  ITER1_O2.md  ITER3_O1.md  ITER3_O2.md  ITER4_O1.md  ITER5_O1.md  ITER5_O2.md  ITER6_O1.md  QA_DESKTOP_1.md  QA_DESKTOP_2.md  QA_MOBILE_IPHONE_11.md  QA_MOBILE_IPHONE_SE.md  QA_WAVE_K_Q1.md  QA_WAVE_K_Q2.md  QA_WAVE_K_Q3.md  QA_WAVE_K_Q4.md  QA_WAVE_K_Q5.md  README.md  SEASON_REPORT.md  _gen_o2.js  _write_o2.py  iter1_o1_result.json  iter1_o1_sim.py  iter3_e1_veto.py  iter3_e2_deadline.py  iter3_e4_rookie.py  iter5_o1_debug.py  iter5_o1_run.py  iter6_o1_run.py  play_season.py  qa_desktop_2.py  qa_desktop_desktop1.py  qa_mobile_3.py  qa_mobile_4.py  smoke_injuries.py  smoke_openrouter.py  smoke_settings.py  smoke_trade_persuasion.py  smoke_trades.py
(+378 files in other folders)
