[project]
name = "fantasy-nba-draft"
version = "0.1.0"
description = "NBA Fantasy Basketball draft simulator (8-team snake, 7 AI GMs)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "playwright>=1.44",
    "httpx>=0.27",
]
